--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "file-saver": "^2.0.5",
+    "flowbite-react": "^0.12.7",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
