--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-jwt": "^1.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
