--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-jwt": "^1.3.0",
